fix bug in game draw logic, refactor code to be more readable, make player marks more visible by incresing font-size

--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
+main,
+.game-box {
+    display: flex;
+}
+
 
 main {
-    display: flex;
     flex-wrap: wrap;
     border: 1px solid red;
     height: 25rem;
@@ -8,6 +12,9 @@ main {
 }
 
 .game-box {
+    align-items: center;
+    justify-content: center;
+    font-size: 5rem;
     border: 1px solid blue;
     height: 8.2rem;
     width: 8.2rem;
